# disco-war

./: Dockerfile  pyproject.toml
.github/workflows/: docker-publish.yml
disco_war/: bot.py  common_types.py  configuration.py  main.py  markdown.py  parsing.py  processing.py  test.py  types.py  w3g.py
disco_war/controllers/: players_controller.py  results_processing.py
disco_war/repository/: redis.py  types.py
scripts/: add_aliases.py  flush_redis.py  migrate_old_games.py  migrate_old_group.py
